# climate_datalogger_client

./: README.md
case/: case.fcstd  case.fcstd1  case.stl  case_1.stl  case_assembly.fcstd  case_assembly.fcstd1  case_new.stl  readme.md
case/for_print/: box.stl  cover_box.stl  display.stl  new_box.stl  pcb.stl
esp/: BaseMessage.pb.h  CMakeLists.txt  Config.hpp  ConfigServer.cpp  ConfigServer.hpp  DataLogger.cpp  DataLogger.hpp  DataLoggerClient.cpp  DataLoggerClient.hpp  Display.hpp  EEPROMUtils.hpp  PBUtilsKey.hpp  TemperatureProtocol.pb.c  TemperatureProtocol.pb.h  TemperatureSensor.cpp  TemperatureSensor.hpp  Worker.hpp  esp.ino
esp/configPage/: ConfigPage.html  ConfigPage_m.html  compactPage.html  compactPage.sh
esp01/: Adafruit_ESP8266.h  esp01.ino
pcb/keys/: client.bak  client.dsn  client.kicad_pcb  client.kicad_pcb-bak  client.rules  client.ses  client.xml  sym-lib-table
pcb/keys/client/: client-cache.lib  client-rescue.lib  client.net  client.pro
pcb/keys/plots/: client-B.Cu.gbr  client-B.Mask.gbr  client-B.SilkS.gbr  client-Edge.Cuts.gbr  client-F.Cu.gbr  client-F.Mask.gbr  client-F.SilkS.gbr  client-NPTH.drl  client-PTH.drl
pcb/motherboard/motherboard/: motherboard-B.Cu.ps  (+8 more)
test_protobuf/: .gitignore  CMakeLists.txt  main.cpp
test_protobuf/pb/: BaseMessage.pb.h  Temperature.pb.h
tests/esp01/: Adafruit_ESP8266.cpp
tests/test_protobuf/: main.cpp
thermostat_client/include/: ConfigPage.hpp  DataLogger.hpp  Display.hpp  Value.hpp  Worker.hpp
thermostat_client/src/: DataLogger.cpp  DataLoggerClient.cpp  Display.cpp  PBUtilsKey.cpp  main.cpp
(+8 files in other folders)
